fix: broken css class 2. serve index.html file as default.html

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -2,7 +2,7 @@ body {
   font-family: Lato;
   color: #fff;
 }
-.container {
+section.ms-main-header {
   margin: 0 auto;
   background-color: #7B3830;
   border: 0px;
